<resources>
    <string name="app_name">WideLoc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="connected">Connected</string>
    <string name="navbar_menu">NavBar Menu</string>
    <string name="start_recording">Start Recording</string>
    <string name="connect_device">Connect Device</string>
    <string name="pages">Pages</string>
    <string name="home">Home</string>
    <string name="devices">Devices</string>
    <string name="statistics">Statistics</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="help_and_support"><![CDATA[Help & Support]]></string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="contacts">Contacts</string>
    <string name="add_device">Add Device</string>
    <string name="connect_all"><u>Connect all</u></string>
    <string name="need_to_reconfigure">Need to Reconfigure</string>
    <string name="disconnect">Disconnect</string>
    <string name="device_detail">Device Detail</string>
    <string name="status">Status</string>
    <string name="calibration_sync"><![CDATA[Callibration & Sync]]></string>
    <string name="calibrate_sync"><![CDATA[Callibrate & Sync]]></string>
    <string name="coordinate_cm">Coordinate(cm)</string>
    <string name="coordinate_format">x:%1$d   y:%2$d   z:%3$d</string>
    <string name="set_offset">Set Offset</string>
    <string name="offset_cm">Offset(cm)</string>
    <string name="change_role">Change Role</string>
    <string name="role">Role</string>
    <string name="battery">Battery</string>
    <string name="percent">percent</string>
    <string name="forget_device">Forget Device</string>
    <string name="delete_device">Delete Device</string>
    <string name="wifi">Wi-Fi</string>
    <string name="select_connection_protocol">Select Connection Protocol</string>
    <string name="or">or</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="input_device_url">Input Device URL</string>
    <string name="connect">Connect</string>
    <string name="setup_device">Set Up Device</string>
    <string name="save">Save</string>
    <string name="name">Name</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="add_image">Add Image</string>
    <string-array name="wifi_steps">
        <item>Connect Device Wifi</item>
        <item>Set Up Device</item>
        <item>Configure Network</item>
        <item>Configure Device</item>
    </string-array>
    <string-array name="bluetooth_steps">
        <item>Turn On Bluetooth</item>
        <item>Pairing with The Device</item>
        <item>Set Up Device</item>
        <item>Test Connection</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_connection">Test Connection</string>
    <string name="recalibrate">Recalibrate</string>
    <string name="correct">Correct</string>
    <string name="skip">Skip</string>
    <string name="the_bluetooth_is_off_please_turn_on_first">The bluetooth is off, please turn on first</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_on_bluetooth">Turn On Bluetooth</string>
    <string name="pairing_with_the_device">Pairing with The Device</string>
    <string name="pair">Pair</string>
    <string name="available_devices">Available Devices</string>
    <string name="select_your_device">Select your device</string>
    <string name="next">Next</string>
    <string name="the_bluetooth_is_on">The bluetooth is on</string>
    <string name="select_available_networks">Select Available Networks</string>
    <string name="make_sure_to_select_the_uwb_access_point_commonly_starts_by_esp32_uwb">Make sure to select the UWB access point (commonly starts by esp32-uwb...)</string>
    <string name="selected_wifi">Selected Wifi:</string>
    <string name="wifi_password">Wifi Password</string>
    <string name="refresh_scan">Refresh Scan</string>
    <string name="configure_network">Configure Network</string>
    <string name="dns_domain_name_system">DNS(Domain Name System)</string>
    <string name="configure">Configure</string>
    <string name="port">Port</string>
    <string name="device_s_access_point_ssid">Device\'s Access Point SSID</string>
    <string name="set_ssid_same_as_dns">Set the SSID the same as the DNS</string>
    <string name="device_s_access_point_password">Device\'s Access Point Password</string>
    <string name="sta_ssid">Station SSID (Surrounding Network)</string>
    <string name="sta_password">Station Password (Surrounding Network)</string>
    <string name="set_the_device_to_auto_connect_to_the_network">Set the device to <b>auto connect</b> to the network</string>
    <string name="you_don_t_have_any_server_device_yet_select_role_server_first">You don\'t have any server device yet. Select role server first</string>
    <string name="network_connected_to">Network connected to %1$s</string>
    <string name="network_is_different_from_the_one_selected">network is different from the one selected %1$s</string>
    <string name="you_have_not_selected_a_uwb_network_before">You have not selected a UWB network before</string>
    <string name="none">None</string>
    <string name="please_fill_the_dns">Please! Fill the DNS</string>
    <string name="please_fill_the_port">Please! Fill the port</string>
    <string name="please_fill_the_access_point_ssid">Please! Fill the access point SSID</string>
    <string name="please_fill_the_access_point_password">Please! Fill the access point password</string>
    <string name="password_must_be_at_least_8_characters">Password must be at least 8 characters</string>
    <string name="please_fill_the_station_ssid">Please! Fill the station SSID</string>
    <string name="please_fill_the_station_password">Please! Fill the station password</string>
    <string name="configure_device">Configure Device</string>
    <string name="client_max">Maximal Client</string>
    <string name="select_server">Select Server</string>
    <string name="network_address">Network Address</string>
    <string name="device_address">Device Address</string>
    <string name="set_the_device_to_auto_start">Set the device to <b>auto start</b></string>
    <string name="please_connect_to_the_same_network_as_the_uwb_network">Please connect to the same network as the UWB network(%1$s)</string>
    <string name="never_connected_yet">Never connected yet</string>
    <string name="network_not_configured_yet">Network not configured yet</string>
    <string name="dns_not_configured_yet">DNS not configured yet</string>
    <string name="device_configured">Device Configured</string>
    <string name="select_devices">Select Devices</string>
    <string name="select">Select</string>
    <string name="selected">Selected</string>
    <string name="select_anchor">Select Anchor</string>
    <string name="select_clients">Select Clients</string>
    <string-array name="setup_tracking_session_steps">
        <item>Select Devices</item>
        <item>Connect to The Network</item>
        <item>Setup The Map</item>
        <item>Set Devices Layout</item>
    </string-array>
    <string name="select_all"><u>Select all</u></string>
    <string name="select_a_server_first">Select a server first</string>
    <string name="select_a_anchor_first">Select an anchor first</string>
    <string name="select_clients_first">Select at least one client</string>
    <string name="connect_device_networks">Connect to The Device Network</string>
    <string name="select_the_same_network_as_the_server">Select the same network as the server network, namely connected to %1$s</string>
    <string name="setup_map">Setup Map</string>
    <string name="size">Size</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="select_map">Select Map</string>
    <string name="add_map">Add Map</string>
    <string name="name_cant_be_empty">Name can\'t be empty</string>
    <string name="select_an_image_of_your_map">Select an image of your map!</string>
    <string name="length_can_t_be_empty_or_less_than_zero">Length can\'t be empty or less than zero</string>
    <string name="width_can_t_be_empty_or_less_than_zero">Width can\'t be empty or less than zero</string>
    <string name="step_can_t_be_empty_or_less_than_zero">Step axis can\'t be empty or less than zero</string>
    <string name="select_a_map_first">Select a map first</string>
    <string name="there_are_some_invalid_input">There are some invalid input</string>
    <string name="set_devices_layout">Set Initial Device Layout</string>
    <string name="server">Server</string>
    <string name="the_server_coordinates_are_set_as_point_0_0_0_you_can_set_the_offset_if_you_want_to_shift_it">The server coordinates are set as point 0(0,0). You can set the offset if you want to shift it.</string>
    <string name="x_offset">Offset X</string>
    <string name="y_offset">Offset Y</string>
    <string name="anchor">Anchor</string>
    <string name="anchor_coordinates_are_assumed_to_be_fixed_unchanging_make_sure_you_set_them_correctly">Anchor coordinates are assumed to be fixed (unchanging). Make sure you set them correctly.</string>
    <string name="clients">Clients</string>
    <string name="preview">Preview</string>
    <string name="start">Start</string>
    <string name="map_shifting">Map Shifting</string>
    <string name="coordinate">(%1$s, %2$s)</string>
    <string name="pause_recording">Pause Recording</string>
    <string name="resume_recording">Resume Recording</string>
    <string name="stop">Stop</string>
    <string name="axis_scale">Axis Scale</string>
    <string name="unit">Unit</string>
    <string name="select_unit">Select unit</string>
    <string name="a_x_a">a x a</string>
    <string name="scale">Scale</string>
    <string name="latency">Latency</string>
    <string name="milliseconds">milliseconds</string>
    <string name="accuracy">Accuracy</string>
    <string name="cm">cm</string>
    <string name="power_consumption">Power Consumption</string>
    <string name="mwatt">mWatt</string>
    <string name="statistic_detail">Statistic Detail</string>
    <string name="history">History</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="ms">ms</string>
    <string name="position">Position</string>
    <string name="mm">mm</string>
    <string name="m">m</string>
    <string name="session_id">Session Id: %1$s</string>
    <string name="device_positions">Device Positions</string>
    <string name="distance_point1_point2"><![CDATA[Distance %1$s <-> %2$s]]></string>
    <string name="axis_step">Axis Step</string>
    <string name="step">Step</string>
    <string name="elapsed_time">Elapsed time:</string>
</resources>