<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rizqi.wideloc.presentation.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_devices"
        android:name="com.rizqi.wideloc.presentation.ui.devices.DevicesFragment"
        android:label="@string/devices"
        tools:layout="@layout/fragment_devices" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.rizqi.wideloc.presentation.ui.slideshow.SlideshowFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_slideshow" />
</navigation>