<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_default"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/turn_on_bluetooth"
        android:fontFamily="@font/roboto_medium"
        android:textSize="18sp"
        android:textColor="@color/text_default"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/the_bluetooth_is_off_please_turn_on_first"
        android:textAlignment="center"
        android:fontFamily="@font/roboto_regular"
        android:textSize="16sp"
        android:textColor="@color/text_default"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/turnOnButtonTurnOnBluetoothFragment"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:backgroundTint="@color/background_primary"
        android:fontFamily="@font/roboto_semibold"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/turn_on"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="64dp"
        app:iconGravity="textEnd"
        app:iconSize="16dp"
        />

</LinearLayout>