<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_default"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/titleTextViewFragmentPairingDevice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/pairing_with_the_device"
        android:fontFamily="@font/roboto_medium"
        android:textSize="18sp"
        android:textColor="@color/text_default"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/available_devices"
        android:fontFamily="@font/roboto_regular"
        android:textSize="16sp"
        android:textColor="@color/text_default"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_your_device"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/roboto_regular"
        android:textSize="12sp"
        android:textColor="@color/text_secondary_2"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/availableDevicesRecyclerViewFragmentPairingDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/available_device_to_pair_card"
            tools:itemCount="5"
            android:nestedScrollingEnabled="false"
            />

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pairButtonFragmentPairingDevice"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:backgroundTint="@color/background_primary"
        android:fontFamily="@font/roboto_semibold"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/pair"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="64dp"
        app:iconGravity="textEnd"
        app:iconSize="16dp"
        />

</LinearLayout>