<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_default"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/connect_device_networks"
        android:textColor="@color/text_default"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/descriptionTextViewConnectNetworkFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/select_the_same_network_as_the_server"
        android:textColor="@color/text_secondary"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/refreshButtonConnectNetworkFragment"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="@color/background_default"
        app:cornerRadius="24dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        app:icon="@drawable/ic_rotate_right_solid"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconSize="14dp"
        app:iconTint="@color/background_primary"
        app:strokeColor="@color/border_secondary"
        app:strokeWidth="2dp"
        android:text="@string/refresh_scan"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:fontFamily="@font/roboto_regular"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/text_primary"
        android:layout_marginTop="16dp"
        android:layout_gravity="end"
        app:rippleColor="@color/background_primary_2"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:fillViewport="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/availableWifiRecyclerViewConnectNetworkFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false" />

    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/selected_wifi"
        android:textColor="@color/text_default"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/selectedWifiTextViewConnectNetworkFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/roboto_semibold"
        android:text="-"
        android:textColor="@color/text_default"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wifiPasswordInputLayoutConnectNetworkFragment"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/wifi_password"
        android:visibility="gone"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/text_primary"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="3dp"
        app:cursorColor="@color/text_primary"
        app:hintTextColor="@color/text_primary"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wifiPasswordInputEditTextConnectNetworkFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/connectButtonConnectNetworkFragment"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/background_primary"
        android:fontFamily="@font/roboto_semibold"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/connect"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="64dp"
        app:iconGravity="textEnd"
        app:iconSize="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/skipButtonConnectNetworkFragment"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toBottomOf="@id/forgetDeviceButtonDeviceDetailBottomSheet"
        android:backgroundTint="@color/background_default"
        app:cornerRadius="64dp"
        android:layout_marginTop="8dp"
        android:paddingVertical="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:insetLeft="0dp"
        android:insetRight="0dp"
        app:strokeColor="@color/border_secondary"
        app:strokeWidth="2dp"
        android:text="@string/skip"
        android:fontFamily="@font/roboto_semibold"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textColor="@color/text_secondary"
        android:elevation="0dp"
        />
</LinearLayout>
